--- a/robot_brain/dashboard/assets/style.css
+++ b/robot_brain/dashboard/assets/style.css
@@ -9,25 +9,30 @@ body {
     flex-wrap: wrap;
 }
 
-H4 {
+h4 {
+    display: block;
     padding-left: 15px;
 }
 
 /* for all data items on the page */
 .item {
-    background-color: rgb(148, 148, 148);
+    background-color: rgb(69, 21, 13);
     flex: 48%;
+    color: whitesmoke;
     max-width: 48%;
-    max-height: 100%;
+    height: auto;
     margin: 1%;
-    padding-bottom: -10px;
 }
 
 .graph {
-    /*margin: 0px;*/
+    display: block;
     border: none;
-    width: 99.7%;
-    height: 450px;
+    height: 89%;
+    width: 100%;
 }
+
+/*#my-output {*/
+/*    height: fit-content;*/
+/*}*/
 
 
