--- a/robot_brain/dashboard/assets/style.css
+++ b/robot_brain/dashboard/assets/style.css
@@ -16,7 +16,7 @@ h4 {
 
 /* for all data items on the page */
 .item {
-    background-color: #3498db;
+    background-color: #b2b2ff;
     flex: 48%;
     color: whitesmoke;
     max-width: 48%;
