--- a/robot_brain/dashboard/assets/style.css
+++ b/robot_brain/dashboard/assets/style.css
@@ -24,6 +24,14 @@ h4 {
     margin: 1%;
 }
 
+.large-item {
+    background-color: #b2b2ff;
+    flex: 98%;
+    color: whitesmoke;
+    max-width: 98%;
+    height: auto;
+    margin: 1%;
+}
 .graph {
     display: block;
     border: none;
